<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:columnCount="2">
    <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/certAndPassword"
            />

    <TextView
            android:id="@+id/label0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text"
            android:layout_alignBaseline="@+id/password"
            android:layout_marginRight="30dp"
            android:text="@string/password"
            />

    <EditText
            android:id="@id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_toRightOf="@id/label0"
            android:layout_below="@id/text"
            android:textIsSelectable="true"
            android:inputType="text|textNoSuggestions"
            android:text="@string/samplePassword"
            />

    <fragment
            android:tag="cert"
            android:name="com.lambdaworks.keys.CertFragment"
            android:layout_below="@id/password"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"/>
</RelativeLayout>

